@@ -1,2 +1,0 @@
-@charset "UTF-8";
-/* Style overrides for Right to Left languages */
