@@ -1,35 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE install PUBLIC "-//Joomla! 1.5//DTD template 1.0//EN" "http://dev.joomla.org/xml/1.5/template-install.dtd">
-<install version="1.5" type="template">
-	<name>Austere</name>
-	<creationDate>10/10/14</creationDate>
-	<author>Steve Fisher</author>
-	<authorEmail>hello@stevefisher.ca</authorEmail>
-	<authorUrl>http://www.stevefisher.ca</authorUrl>
-	<copyright></copyright>
-	<license>GPL</license>
-	<version>0.1</version>
-	<description>A clean, lean typographically driven machine.</description>
-	<files>
-		<filename>index.php</filename>
-		<filename>index.html</filename>
-		<filename>favicon.ico</filename>
-		<filename>templateDetails.xml</filename>
-		<filename>template_thumbnail.png</filename>
-		<filename>component.php</filename>
-		<folder>html</folder>
-		<folder>css</folder>
-		<folder>images</folder>
-		<folder>js</folder>
-	</files>
-	<positions>
-		<position>breadcrumb</position>
-		<position>right</position>
-		<position>top</position>
-		<position>topmenu</position>
-		<position>bottom</position>
-		<position>feature</position>
-		<position>footer</position>
-		<position>debug</position>
-	</positions>
-</install>
